--- a/panel/jatinegara/index.html
+++ b/panel/jatinegara/index.html
@@ -35,13 +35,13 @@ import { getDatabase, ref, onValue } from 'https://www.gstatic.com/firebasejs/10
 import { getAuth, signOut, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js';
 
 const firebaseConfig = {
-  apiKey: "AIzaSyArjIuAyCRw85LStoiJzgIdLyhs8HXPFhs",
-  authDomain: "poi-taxi.firebaseapp.com",
-  projectId: "poi-taxi",
-  storageBucket: "poi-taxi.firebasestorage.app",
-  messagingSenderId: "774582687333",
-  appId: "1:774582687333:web:ee95e1e3e705beaee4d88c",
-  databaseURL: "https://poi-taxi-default-rtdb.asia-southeast1.firebasedatabase.app"
+  apiKey: "AIzaSyCZ-hruI3CTyKeBtqqmNoIBFNBPw1h6Sbo",
+  authDomain: "poi-sistem.firebaseapp.com",
+  projectId: "poi-sistem",
+  storageBucket: "poi-sistem.firebasestorage.app",
+  messagingSenderId: "952727715423",
+  appId: "1:952727715423:web:438bdb765c8864c9e2e5ea",
+  databaseURL: "https://poi-sistem-default-rtdb.asia-southeast1.firebasedatabase.app"
 };
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
