--- a/login.html
+++ b/login.html
@@ -11,10 +11,11 @@
 import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js';
 import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js';
 const firebaseConfig = {
-  apiKey: "AIzaSyArjIuAyCRw85LStoiJzgIdLyhs8HXPFhs",
-  authDomain: "poi-taxi.firebaseapp.com",
-  projectId: "poi-taxi",
-  databaseURL: "https://poi-taxi-default-rtdb.asia-southeast1.firebasedatabase.app"
+  apiKey: " "AIzaSyCZ-hruI3CTyKeBtqqmNoIBFNBPw1h6Sbo",
+",
+  authDomain: "poi-sistem.firebaseapp.com",
+  projectId: "poi-sistem",
+  databaseURL: "https://poi-sistem-default-rtdb.asia-southeast1.firebasedatabase.app"
 };
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
