--- a/login.html
+++ b/login.html
@@ -11,8 +11,7 @@
 import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js';
 import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js';
 const firebaseConfig = {
-  apiKey: " "AIzaSyCZ-hruI3CTyKeBtqqmNoIBFNBPw1h6Sbo",
-",
+  apiKey: "AIzaSyCZ-hruI3CTyKeBtqqmNoIBFNBPw1h6Sbo",
   authDomain: "poi-sistem.firebaseapp.com",
   projectId: "poi-sistem",
   databaseURL: "https://poi-sistem-default-rtdb.asia-southeast1.firebasedatabase.app"
